search box funtionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-        <div>
+        <div class="landing">
         <p> Welcome to 9jabizz tasks</p>
         <a href="landing page.php">continue</a>
         </div>
