--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href="landing.css" rel="stylesheet">
+        <style>
+            #body{
+                background-color: black;
+                color: white;
+            }
+            .div{
+                margin-left:300px;
+                margin-top: 200px;
+            }
+            p{
+                font-size: 4em;
+            }
+            a{
+                 font-size:2em;
+                 color: white;
+                 margin-left:250px;
+            }
+            
+        </style>
     </head>
-    <body>
-        <div class="landing">
-        <p> Welcome to 9jabizz tasks</p>
+    <body id="body">
+        <div class="div">
+        <p><strong> Welcome to 9jabizz tasks</strong></p>
         <a href="landing page.php">continue</a>
         </div>
     </body>
+
 </html>
